# nldsc

./: .gitignore  .gitmodules  Makefile  README.md  nldsc.py  requirements.txt
nldsc/: __init__.py  __main__.py  routines.py
nldsc/core/: __init__.py  common.py  logger.py  routines.py
nldsc/h2/: __init__.py  common.py  irwls.py  jackknife.py  regressions.py  routine.py  utils.py
nldsc/ldscore/: __init__.py  _ldscore.pyi  common.py  routine.py
nldsc/ldscore/_ldscore/: CMakeLists.txt  data.h  encoder.h  indicators.h  ldscalc.h  ldscore.cpp  stream.h  tools.h
src/core/: __init__.py  common.py  core.py  dispatcher.py  ld.py  logger.py  parser.py
src/ldscore/: CMakeLists.txt  __init__.py  data.h  encoder.cpp  encoder.h  ldscalc.cpp  ldscalc.h  ldscore.cpp  ldscore.pyi  setup.py  stream.cpp  stream.h  tools.cpp  tools.h
src/ldscore/cpp/: CMakeLists.txt  data.h  encoder.h  ldscalc.h  ldscore.cpp  stream.h  tools.h
src/regression/: h2.py
